@@ -4,10 +4,12 @@ import pt.ipp.isep.dei.g312.application.controller.AddNewEntryAgendaController;
 import pt.ipp.isep.dei.g312.domain.*;
 import pt.ipp.isep.dei.g312.ui.console.utils.Utils;
 
+import java.util.Calendar;
 import java.util.InputMismatchException;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
+import java.util.regex.Pattern;
+
 
 
 public class AddNewEntryAgendaUI implements Runnable {
@@ -39,19 +41,9 @@ public class AddNewEntryAgendaUI implements Runnable {
                 List<ToDoList> toDoEntryList = controller.getToDoListEntries(selectedGreenSpace);
                 ToDoList selectedEntry = selectToDoListEntry(toDoEntryList, selectedGreenSpace); // Corrigido para incluir selectedGreenSpace
                 if (selectedEntry != null) {
-                    System.out.printf("The selected To-Do List entry was: %s\n", selectedEntry);
-                    System.out.println();
-                    System.out.println("Enter the start date (format DD/MM/YYYY):");
-
-                    Scanner scanner = new Scanner(System.in);
-                    String startDate = scanner.nextLine();
-
-                    // Confirmation with input validation
-                    boolean confirmed = showsDataRequestsValidation(startDate);
-
-                    if (confirmed) {
-                        controller.addEntryAgenda(startDate, selectedEntry);
-                        System.out.println("Entry added to agenda successfully!");
+                    String startDate = getValidDate();
+                    if (showsDataRequestsValidation(startDate)) {
+                        controller.addEntryAgenda(startDate, selectedEntry, TaskStatus.Pending);                        System.out.println("Entry added to agenda successfully!");
                     } else {
                         System.out.println("Entry addition cancelled.");
                     }
@@ -61,18 +53,16 @@ public class AddNewEntryAgendaUI implements Runnable {
             } else {
                 System.out.println("No Green Space selected. Entry not added.");
             }
-
-            // Update continueAddingEntryToAgenda based on user choice
             continueAddingEntryToAgenda = askUserIfContinue();
         } while (continueAddingEntryToAgenda);
 
         System.out.println("Exiting Add New Entry to Agenda menu.");
     }
 
-    public ToDoList selectToDoListEntry(List<ToDoList> toDoEntryList, GreenSpace selectedGreenSpace) {
+    private ToDoList selectToDoListEntry(List<ToDoList> toDoEntryList, GreenSpace selectedGreenSpace) {
         List<ToDoList> filteredList = toDoEntryList.stream()
                 .filter(entry -> entry.getGreenSpace().equals(selectedGreenSpace.getName()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (filteredList.isEmpty()) {
             System.out.println("There are no To-Do List entries associated with the selected Green Space.");
@@ -86,18 +76,20 @@ public class AddNewEntryAgendaUI implements Runnable {
         }
 
         Scanner scanner = new Scanner(System.in);
-        int choice;
+        int choice = -1;
 
-        do {
-            System.out.println("Enter the number of the To-Do List entry you want to select (or 0 to cancel):");
-            try {
+        while (choice < 0 || choice > filteredList.size()) {
+            System.out.print("Enter the number of the To-Do List entry you want to select (or 0 to cancel): ");
+            if (scanner.hasNextInt()) {
                 choice = scanner.nextInt();
-            } catch (InputMismatchException e) {
-                scanner.nextLine(); // Clear invalid input from buffer
+                if (choice < 0 || choice > filteredList.size()) {
+                    System.out.println("Invalid selection. Please try again.");
+                }
+            } else {
                 System.out.println("Invalid input. Please enter a number.");
-                choice = -1; // Set invalid choice to trigger another loop iteration
+                scanner.next(); // Clear invalid input
             }
-        } while (choice < 0 || choice > filteredList.size());
+        }
 
         if (choice == 0) {
             return null; // User cancelled selection
@@ -109,74 +101,87 @@ public class AddNewEntryAgendaUI implements Runnable {
 
     private GreenSpace selectGreenSpace() {
         List<GreenSpace> greenSpaces = controller.getGreenSpaceList();
-
         if (greenSpaces.isEmpty()) {
             System.out.println("No Green Spaces found.");
             return null;
         }
-
-        int index = 1;
-
-        for (GreenSpace greenSpace : greenSpaces) {
-            System.out.printf("%d - %s\n", index, greenSpace.getName());
-            index++;
+        for (int i = 0; i < greenSpaces.size(); i++) {
+            System.out.printf("%d - %s\n", i + 1, greenSpaces.get(i).getName());
         }
-
-        System.out.println();
-        System.out.print("Type your option (0 to cancel):");
-
-        Scanner scanner = new Scanner(System.in);
-        String choiceStr = scanner.nextLine();
-
-        int choice;
-        try {
-            choice = Integer.parseInt(choiceStr);
-        } catch (NumberFormatException e) {
-            System.out.println("Invalid input. Please enter a number or '0' to cancel.");
-            return null;
-        }
-
-        if (choice == 0) {
-            return null; // Exit if choice is 0
-        } else if (choice <= 0 || choice > greenSpaces.size()) {
-            System.out.println("Invalid selection.");
-            return null;
-        }
-
-        boolean displaySelectedGreenSpaceName = true; // Flag to control printing
-
-        GreenSpace selectedGreenSpace = greenSpaces.get(choice - 1);
-
-        if (displaySelectedGreenSpaceName) {
-            System.out.printf("The selected Green Space was: %s\n", selectedGreenSpace.getName());
-        }
-        return selectedGreenSpace;
-    }
-
-    private boolean showsDataRequestsValidation(String startDate) {
-        if (toDoList != null) {
-            System.out.printf("\nYou have selected the To-Do List entry: %s\n", toDoList); // Display selected entry details
-            System.out.println("Start date: " + startDate); // Added validation prompt for start date
-            return requestConfirmation();
-        } else {
-            System.out.println("No To-Do List entry selected.");
-            return false; // No confirmation needed if no entry is selected
-        }
+        System.out.print("Type your option (0 to cancel): ");
+        int choice = getUserChoice(greenSpaces.size());
+        return choice == 0 ? null : greenSpaces.get(choice - 1);
     }
 
     private boolean askUserIfContinue() {
-        System.out.println("Do you want to add another entry? (y/n)");
-        return getUserChoice();
+        System.out.print("Do you want to add another entry? (y/n): ");
+        Scanner scanner = new Scanner(System.in);
+        String choice = scanner.nextLine().trim().toLowerCase();
+        return choice.equals("y") || choice.equals("yes");
     }
 
-    public boolean getUserChoice() {
+    private int getUserChoice(int maxOption) {
         Scanner scanner = new Scanner(System.in);
-        String choice = scanner.nextLine().toLowerCase(); // Convert input to lowercase
+        int choice;
+        while (true) {
+            try {
+                choice = scanner.nextInt();
+                if (choice >= 0 && choice <= maxOption) {
+                    break;
+                } else {
+                    System.out.print("Invalid selection. Try again: ");
+                }
+            } catch (InputMismatchException e) {
+                System.out.print("Invalid input. Please enter a number: ");
+                scanner.next(); // Clear invalid input
+            }
+        }
+        return choice;
+    }
 
-        return choice.equals("y") || choice.equals("yes");
+    private String getValidDate() {
+        Scanner scanner = new Scanner(System.in);
+        String datePattern = "^([0-2][0-9]|(3)[0-1])/(0[1-9]|1[0-2])/((19|20)\\d\\d)$";
+        Pattern pattern = Pattern.compile(datePattern);
+        String date;
+        while (true) {
+            System.out.print("Enter the start date (format DD/MM/YYYY): ");
+            date = scanner.nextLine();
+            if (pattern.matcher(date).matches() && isValidCalendarDate(date)) {
+                break;
+            } else {
+                System.out.println("Invalid date format. Please enter a valid date in the format DD/MM/YYYY.");
+            }
+        }
+        return date;
+    }
+
+    private boolean isValidCalendarDate(String date) {
+        try {
+            int day = Integer.parseInt(date.substring(0, 2));
+            int month = Integer.parseInt(date.substring(3, 5));
+            int year = Integer.parseInt(date.substring(6, 10));
+            Calendar calendar = Calendar.getInstance();
+            calendar.setLenient(false);
+            calendar.set(year, month - 1, day);
+            calendar.getTime(); // This will throw an exception if the date is invalid
+            return true;
+        } catch (Exception e) {
+            return false;
+        }
     }
 
     private boolean requestConfirmation() {
         return Utils.requestConfirmation();
+    }
+    private boolean showsDataRequestsValidation(String startDate) {
+        if (toDoList != null) {
+            System.out.printf("\nYou have selected the To-Do List entry: %s\n", toDoList); // Display selected entry details
+            System.out.printf("Start date: %s\n", startDate); // Added validation prompt for start date
+            return requestConfirmation(); // Chamando requestConfirmation sem parâmetros
+        } else {
+            System.out.println("No To-Do List entry selected.");
+            return false; // No confirmation needed if no entry is selected
+        }
     }
 }
